fix: Tighten header and inputs layout on mobile (#1303)

--- a/src/components/ui/branding/index.module.css
+++ b/src/components/ui/branding/index.module.css
@@ -16,6 +16,12 @@
 .name {
   color: var(--foreground-shade);
 }
+
+@media (max-width: 599px) {
+  .name {
+    display: none;
+  }
+}
 .name > span:last-child {
   color: var(--foreground);
 }
