--- a/src/components/ui/header/index.module.css
+++ b/src/components/ui/header/index.module.css
@@ -4,18 +4,8 @@
   padding: var(--content-padding);
   padding-top: var(--spacing-md);
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
-  gap: var(--spacing-sm);
+  gap: var(--spacing-md);
   justify-content: space-between;
-}
-
-.container.isOnlyBranding {
-  align-items: flex-start;
-}
-
-@media (min-width: 768px) {
-  .container {
-    flex-direction: row;
-  }
 }
